апи и бд для работы с компаниями и их членами
