# internal/handler/handler.go
@@ -39,6 +39,10 @@ func (h *Handler) Router() *fiber.App {
 	f.Get("/swagger/*", swagger.HandlerDefault)
 	f.Post("/signup", h.SignUp)
 	f.Post("/login", h.Login)
+	f.Get("/users", h.GetAllUsers)
+	f.Post("/company/create", h.CreateCompany)
+	f.Get("/company/:id/members", h.GetCompanyMembers)
+
 	//authGroup := f.Group("/auth")
 	//authGroup.Use(func(c *fiber.Ctx) {
 	//	_ = pkg.WithJWTAuth(c, h.conf.Application.SigningKey)
